--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
+
 <body>
-    HI
+    <div class="wrapper">
+        <div class="container">
+            <div class="card">
+                <div class="profile">
+                    <div>
+                        <img src="./avatar-jessica.jpeg">
+                    </div>
+                    <div>
+                        <h1>Jessica Randall</h1>
+                        <p>London, United Kingdom</p>
+                    </div>
+                    <div>
+                        <small> "front-end Developer and avid reader" </small>
+                    </div>
+                </div>
+                <div class="links">
+                    <a class="social" href="#">
+                        Github
+                    </a>
+                    <a class="social" href="#">
+                        Github
+                    </a>
+                    <a class="social" href="#">
+                        Github
+                    </a>
+                    <a class="social" href="#">
+                        Github
+                    </a>
+                    <a class="social" href="#">
+                        Github
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
